# AndroidExamples

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
binder/Common/: build.gradle
binder/Common/src/main/: AndroidManifest.xml
binder/Common/src/main/cpp/: .gitignore
binder/Common/src/main/cpp/includes/: LogDefs.h
binder/JavaBinderClient/: build.gradle
binder/JavaBinderClient/src/main/: AndroidManifest.xml
binder/JavaBinderClient/src/main/res/layout/: activity_main.xml
binder/JavaBinderClient/src/main/res/values/: strings.xml
binder/JavaBinderService/: build.gradle
binder/JavaBinderService/src/main/: AndroidManifest.xml
binder/JavaBinderService/src/main/res/values/: strings.xml
binder/NdkBinderService/: build.gradle
binder/NdkBinderService/src/main/: AndroidManifest.xml
binder/NdkBinderService/src/main/cpp/: CMakeLists.txt  MyInterface.h  MyService.cpp  MyService.h  native-lib.cpp  ndk.cpp
binder/NdkBinderService/src/main/res/values/: strings.xml
crash/breakpad/: build.gradle
crash/breakpad/src/main/: AndroidManifest.xml
crash/breakpad/src/main/cpp/: CMakeLists.txt  ndk.cpp
crash/breakpad/src/main/java/google/breakpad/: BreakpadInit.java
crash/crasher/: build.gradle
crash/crasher/src/main/: AndroidManifest.xml
crash/crasher/src/main/cpp/: CMakeLists.txt  ndk.cpp
crash/crasher/src/main/res/layout/: activity_main.xml
crash/crasher/src/main/res/values/: strings.xml
doc/: Using aidl of sdk build-tools.md
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
